# SlideForge

./: LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt
docs/: LEGAL_RISK.md
scripts/: create_macos_app.py  launch_gui.command
slideforge/: __init__.py  converter.py  gui.py
