[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "slideforge-mac"
version = "0.1.0"
description = "Native macOS SDPC to OpenSlide-readable WSI converter"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
  {name = "Xinyu Ge"}
]
keywords = ["pathology", "whole-slide-image", "wsi", "sdpc", "openslide", "hevc", "macos"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: MacOS X",
  "Intended Audience :: Science/Research",
  "Operating System :: MacOS",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering :: Image Processing",
]
dependencies = [
  "av>=17.0",
  "imagecodecs>=2025.0",
  "numpy>=2.0",
  "tifffile>=2025.0",
  "Pillow>=10.0",
  "openslide-python>=1.3",
]

[project.optional-dependencies]
dev = ["build", "twine", "ruff"]

[project.scripts]
slideforge-convert = "slideforge.converter:main"
slideforge-gui = "slideforge.gui:main"

[tool.setuptools.packages.find]
include = ["slideforge*"]
